# ndk_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  push_and_run.sh
.github/workflows/: cmake-single-platform.yml
src/: file_dontneed.c  file_flush_test.c  file_mem_stat.c  file_read_speed.c  main.cpp  memspeed.c
